# auth-gateway

./: .dockerignore  .gitignore  .markdownlint.yaml  CHANGELOG.md  Cargo.toml  Chanelog.md  Dockerfile  QuickStart.md  README.devenv.md  README.md  ROADMAP.md  Readme.md  Roadmap.md  authgateway.xml  authgateway.yaml  build-image.sh  package-lock.json  package.json  test_rules.yaml
demo/: Dockerfile-auditstore  docker-compose.yaml
demo/auditstore/: main.py  settings.py
demo/docker/: apps.yaml  auth-gateway.template.yaml  entrypoint.sh
devenv/: nginx.conf  oauth2.conf  pod.yaml
gateway/: constants.js  shutdown.js  spawner.js
gateway/commands/: base.js  list-domains.js  run.js  version.js
gateway/configuration/: auth_proxy.js  default.js  http_proxy.js  index.js
gateway/server/: api.js  app.js  auth_logic.js  handle_errors.js  index.js  utils.js
gateway/server/api/: audit.js  auth.js  index.js  metrics.js  proxied.js  utils.js
gateway/server/auditor/: base.js  console.js  http.js  index.js  null.js  record.js  test.js
gateway/server/static/: portal.css
gateway/server/views/: index.ejs  index.js  profile.ejs
gateway/subprocs/: index.js
portal/: .babelrc  Caddyfile  index.ejs  package.json  webpack.config.js
portal/src/: main.css  main.js
portal/src/app/: index.js  login.js  portal.js  profile.js
portal/src/store/: actions.js  fetchers.js  index.js
src/: config.rs  errors.rs  lib.rs  main.rs  server.rs
src/audit/: log.rs  mod.rs  noop.rs
src/audit/mongodb/: mod.rs  record.rs  reporter.rs
src/authenticator/: allow_all.rs  identity_headers.rs  mod.rs  oauth2_proxy.rs  tests.rs
src/config/: mod.rs  mongodb.rs  oauth2_proxy.rs
src/engine/: mod.rs  tests.rs
src/models/: audit.rs  context.rs  mod.rs  rule.rs
src/models/audit/: mod.rs  tests.rs
src/models/rule/: matches.rs  mod.rs  session_matches.rs
templates/auth/: oauth2.ejs
templates/http/: nginx.ejs
templates/nginx/: main.ejs
test/gateway/: test_shutdown.js  test_spawner.js
test/gateway/commands/: test_base.js  (+3 more)
tests/fixtures/: rules_file_1.yaml  rules_file_2.yaml
utils/: self-sign.sh
utils/audit-report/: .gitignore  README.md  datafetcher.js  emailer.js  mongo-shell.js  package-lock.json  package.json  renderer.js  report.example.yaml  report.js
utils/demo/: docker-compose-audit.yaml  docker-compose.yaml
utils/systemd/: authgateway.service
(+44 files in other folders)
