[package]
name = "authgateway"
version = "0.5.0"
edition = "2018"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]

categories = ["authentication", "web-programming"]
description = "A flexible authentication helper for HTTPS proxies"
keywords = ["authentication", "proxy"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/stefano-pogliani/auth-gateway"

[dependencies]
actix-web = "^3.3.2"
anyhow = "^1.0.38"
env_logger = "^0.8.2"
log = "^0.4.14"
serde = "^1.0.123"
serde_json = "^1.0.62"
serde_yaml = "^0.8.15"
structopt = "^0.3.21"
thiserror = "^1.0.23"

[dev-dependencies]
actix-http = "^2.2.0"
actix-rt = "^1.1.0"
